# ZLink

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  go.work  go.work.sum  now.md
.claude/: settings.local.json
client-py/: README.md  main.basic.py.tmpl  main.game.py.tmpl  pyproject.toml  pyproject.toml.tmpl
client-py/examples/: pyproject.toml
client-unity/: README.md
client-unity/Assets/: ZPP_Engine.csproj
client-unity/examples/: BasicClient.cs  Main.cs
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  implementation_plan.md  improvement-plan-2026-06-30.md  new-project-guide-2026-06-25.md  plan_client_access_restriction.md  plan_isession_standardization.md  project-generator-plan.md
engine/client-python/: pyproject.toml
engine/server-go/: go.mod
examples/: README.md
examples/client-py/: basicClient.py  main.py  pyproject.toml  zlink
examples/client-unity/: basicClient.cs  scene.unity  zlink
examples/server-go/: basicServer.go  go.mod
generator/: Makefile  README.md  pyproject.toml
generator/output/: Protocol.go
generator/schemas/: basic.yaml  game.yaml
generator/src/: cli.py  loader.py  models.py  scaffold.py  validator.py
generator/src/generators/: csharp_generator.py  go_generator.py  markdown_generator.py  python_generator.py
schemas/: game-sample.yaml  v1000008.yaml
scripts/: project_generator.py
sdk/: README.md
server/: Makefile  README.md  go.mod
server-go/: Makefile
server-go/pkg/: go.mod
server-go/protocol/: Protocol.game.go
server-go/schemas/: basic.yaml
server/cmd/: main.go
(+97 files in other folders)
